# agent-forge

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.cursor/skills/bootstrap/: SKILL.md
.cursor/skills/full-review/: SKILL.md
.cursor/skills/populate/: SKILL.md
.cursor/skills/review-disclosure/: SKILL.md
.cursor/skills/review-identity/: SKILL.md
.cursor/skills/review-memory/: SKILL.md
.cursor/skills/review-operations/: SKILL.md
docs/: README.md  anti-patterns.md  decision-guide.md  glossary.md
docs/principles/: identity-and-character.md  index.md  instruction-delivery.md  memory-architecture.md  permissions-as-design.md  progressive-disclosure.md  skill-design.md  tool-design.md
examples/: README.md
examples/skills/: capture-skill.md  consolidate-skill.md  diagnostic-skill.md
examples/system-prompts/: diagnostic-agent.md  memory-agent.md
examples/tools/: api-query-tool.md  log-fetcher-tool.md
templates/: index.md
templates/fragments/: agents-md.md  index-md.md  index.md  permissions.json  skill.md  system-prompt.md  tool-mutation.py  tool-python.py  tool-wrapper.sh
templates/skeleton/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
templates/skeleton/.pi/: SYSTEM.md  permissions.json  settings.json
templates/skeleton/.pi/skills/primary/: SKILL.md
templates/skeleton/kb/: index.md
templates/skeleton/kb/active/: index.md
templates/skeleton/kb/history/: index.md
templates/skeleton/kb/reference/: index.md
templates/skeleton/tools/: __main__.py  cli.py  example_tool.py  json_io.py
(+3 files in other folders)
